-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
5.5.1
-
None
-
Doesn't matter, but Windows 8 used.
-
e7331bd3b (dev)
I create icon in such way:
QIcon icon;
icon.addFile( "icon.svg", QSize() );
icon.addFile( "icon16.png", QSize( 16, 16 ) );
icon.addFile( "icon32.png", QSize( 32, 32 ) );
icon.addFile( "icon64.png", QSize( 64, 64 ) );
Then I use it:
QPixmap p = icon.pixmap( 16 );
QPixmap p = icon.pixmap( 32 );
QPixmap p = icon.pixmap( 64 );
QPixmap p = icon.pixmap( 256 );
In all cases icon engine (not sure about 64) returns svg converted to pixmap. I expect to have png in first three situations.
The reason is probably addedPixmaps hash map in QSvgIconEngine which hashes using only icon mode and state and ignores size.
| For Gerrit Dashboard: QTBUG-53759 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 563560,6 | SvgIconEngine: support more than one QPixmap (with different size) | dev | qt/qtsvg | Status: MERGED | +2 | +1 |