SvgIconEngine: support more than one QPixmap (with different size)

Support adding more than one QPixmap to QSvgIconEngine. This support is
limited to the actual size without looking at the devicePixelRatio of
the QPixmap as this is what QPixmapIconEngine is for.

Fixes: QTBUG-53759
Change-Id: I9174e63f9abd8e4e207131f21a2002eaf7e62ccb
Reviewed-by: Hatem ElKharashy <hatem.elkharashy@qt.io>