src/plugins/iconengines/svgiconengine/qsvgiconengine.cpp
@@ -54,7 +54,7 @@ public:
 
     QHash<int, QString> svgFiles;
     QHash<int, QByteArray> svgBuffers;
-    QHash<int, QPixmap> addedPixmaps;
+    QMultiHash<int, QPixmap> addedPixmaps;
     int serialNum = 0;
     static QAtomicInt lastSerialNum;
 };
@@ -84,9 +84,14 @@ QSize QSvgIconEngine::actualSize(const QSize &size, QIcon::Mode mode,
                                  QIcon::State state)
 {
     if (!d->addedPixmaps.isEmpty()) {
-        QPixmap pm = d->addedPixmaps.value(d->hashKey(mode, state));
-        if (!pm.isNull() && pm.size() == size)
-            return size;
+        const auto key = d->hashKey(mode, state);
+        auto it = d->addedPixmaps.constFind(key);
+        while (it != d->addedPixmaps.end() && it.key() == key) {
+            const auto &pm = it.value();
+            if (!pm.isNull() && pm.size() == size)
+                return size;
+            ++it;
+        }
     }
 
     QPixmap pm = pixmap(size, mode, state);
@@ -179,12 +184,19 @@ QPixmap QSvgIconEngine::scaledPixmap(const QSize &size, QIcon::Mode mode, QIcon:
         return pm;
 
     if (!d->addedPixmaps.isEmpty()) {
+        const auto realSize = size * scale;
         const auto key = d->hashKey(mode, state);
-        pm = d->addedPixmaps.value(key);
-        if (!pm.isNull() && pm.size() == size * scale && pm.devicePixelRatio() == scale)
-            return pm;
-        if (pm.isNull())
-            d->addedPixmaps.remove(key);
+        auto it = d->addedPixmaps.constFind(key);
+        while (it != d->addedPixmaps.end() && it.key() == key) {
+            const auto &pm = it.value();
+            if (!pm.isNull()) {
+                // we don't care about dpr here - don't use QSvgIconEngine when
+                // there are a lot of raster images are to handle.
+                if (pm.size() == realSize)
+                    return pm;
+            }
+            ++it;
+        }
     }
 
     QSvgRenderer renderer;
